# TODO_APP_WITH_FASTAPI

./: DockerFile.dev  Dockerfile  README.md  compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
tests/: test_main.py
uit_fastapi/: fastapi.py  main.py  settings.py
