[tool.poetry]
name = "uit-fastapi"
version = "0.1.0"
description = ""
authors = ["muhammad-stack <142173430+muhammad-stack@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlmodel = "^0.0.16"
psycopg-binary = "^3.1.18"
httpx = "^0.27.0"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
